fix spacing

--- a/frontend/src/sass/components/_panels.scss
+++ b/frontend/src/sass/components/_panels.scss
@@ -621,7 +621,7 @@
                         font-size: 18px;
                     }
                     @include media-breakpoint-down(sm) {
-                        font-size: 16px;
+                        font-size: 14px;
                         margin-bottom: 8px;
                         line-height: 1.25;
                     }
